--- a/Tests/Properties/Resources.resx
+++ b/Tests/Properties/Resources.resx
@@ -117,6 +117,27 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="PeopleResourceString" xml:space="preserve">
+    <value>{
+  "data": [{
+    "type": "person",
+    "attributes": {
+      "first-name": "John",
+      "last-name": "Smith",
+      "age": 34,
+      "number-of-legs": 2
+    }
+  }, {
+    "type": "person",
+    "attributes": {
+      "first-name": "Smith",
+      "last-name": "John",
+      "age": 33,
+      "number-of-legs": 2
+    }
+  }]
+}</value>
+  </data>
   <data name="PersonResourceString" xml:space="preserve">
     <value>{
   "data": {
